--- a/main.css
+++ b/main.css
@@ -6,11 +6,11 @@
 }
 
 html {
-  font-size: 18px;
+  font-size: 2vw;
 }
 
 body {
-  background-color: #00f;
+  background-color: #0144fc;
   color: #fff;
   font: 600 1rem/1.3 Consolas, Andale Mono, monospace;
   padding: 3rem;
