Playing with the bg colour

--- a/main.css
+++ b/main.css
@@ -10,7 +10,7 @@ html {
 }
 
 body {
-  background-color: #0144fc;
+  background-color: #0762f5;
   color: #fff;
   font: 600 1rem/1.3 Consolas, Andale Mono, monospace;
   padding: 3rem;
