--- a/main.css
+++ b/main.css
@@ -191,3 +191,59 @@ body {
     text-align:center;
     min-height:60vh;
 }
+
+.mail-div {
+    display:flex;
+    height:100%;
+    flex-direction:column;
+    justify-content:center;
+    align-items:center;
+    text-align:center;
+    min-height:50vh;
+}
+
+#hover-effect:before{
+	content:"\f204";
+}
+
+#hover-effect:hover:before{
+	content:"\f205";
+}
+
+
+.mail-div i{
+    font-size: 32px;
+    transition:0.2 linear;
+}
+
+.mail-div:hover{
+    transform: scale(1.5);
+}
+
+
+/* scrollbar customisation for webkit browsers */
+body::-webkit-scrollbar {
+    width: 0.25rem;
+}
+
+body::-webkit-scrollbar-track {
+    background: #1e1e24;
+}
+
+body::-webkit-scrollbar-thumb {
+    background: #6649b8;
+}
+
+/* firefox scrollbar testing */
+/* .scroll { */
+/*   width: 20%; */
+/*   height: 100px; */
+/*   border: 1px solid grey; */
+/*   overflow: scroll; */
+/*   display: inline-block; */
+/* } */
+
+/* .scroll-color-colors { */
+/*   scrollbar-color: grey black; */
+/* } */
+
