--- a/main.css
+++ b/main.css
@@ -1,4 +1,3 @@
-
 * {
   box-sizing: border-box;
   margin: 0;
@@ -10,7 +9,8 @@ html {
 }
 
 body {
-  background-color: #0762f5;
+  /* background-color: #0762f5; */
+  background-color: #212f3d;
   color: #fff;
   font: 600 1rem/1.3 Consolas, Andale Mono, monospace;
   padding: 3rem;
@@ -179,8 +179,12 @@ body {
 }
 
 .site-title {
-  font-size: 2rem;
+  font-size: 1.5rem;
+  z-index: 2;
 }
+
+
+
 
 .parent-div {
     display:flex;
@@ -192,21 +196,13 @@ body {
     min-height:60vh;
 }
 
-.mail-div {
-    display:flex;
-    height:100%;
-    flex-direction:column;
-    justify-content:center;
-    align-items:center;
-    text-align:center;
-    min-height:50vh;
-}
 
-
-
-.icon-div i{
-    font-size: 32px;
-    transition:0.2s linear;
+.icon-div {
+    font-size: 0.5rem;
+    transition:0.2s ease;
+    position: relative;
+    top: 2rem;
+    z-index: 2;
 }
 
 .icon-div:hover{
@@ -243,3 +239,99 @@ body::-webkit-scrollbar-thumb {
 /*   scrollbar-color: grey black; */
 /* } */
 
+
+
+.imgwrap {
+   width: 100%; /*or whatever you choose*/
+   margin: auto;
+}
+.imgwrap img {
+   position:absolute ;
+   display: block;
+   width: 50%;
+   height: auto; /* maintain aspect ratio*/
+   margin: auto; /*optional centering of image*/
+   z-index: 1;
+}
+
+.spam-title {  
+  /* width: 520px; */
+  /* height: 380px; */
+  position: relative;
+  font-size: 1rem;
+  z-index: 2;
+  bottom: 3rem;
+}
+
+.monitor {
+    position: relative;
+    width: 60%;
+    height: 60%;
+    opacity: 1;
+
+}
+
+.monitor img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 80%;
+    height: auto;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+    transition: all .3s ease;
+}
+
+
+.monitor #spam  {
+    position: absolute;
+    left: 49.7%;
+    width: 58.2%;
+    height: auto;
+    padding-top: 17.5%;
+    transform: translate(-49.75%, -63.2%);
+    transition: all .3s ease;
+    z-index: 2;
+    /* -webkit-transform: translate(-50%, -50%); */
+    /* -webkit-transition: all 0.3s ease; */
+    /* transition: all 0.3s ease; */
+}
+#cpMainContainer { display:block; }
+
+@media only screen and (orientation:portrait){
+
+  #main_container {
+
+    height: 100vw;
+
+    -webkit-transform: rotate(90deg);
+
+    -moz-transform: rotate(90deg);
+
+    -o-transform: rotate(90deg);
+
+    -ms-transform: rotate(90deg);
+
+    transform: rotate(90deg);
+
+  }
+
+}
+
+@media only screen and (orientation:landscape){
+
+  #main_container {
+
+     -webkit-transform: rotate(0deg);
+
+     -moz-transform: rotate(0deg);
+
+     -o-transform: rotate(0deg);
+
+     -ms-transform: rotate(90deg);
+
+     transform: rotate(90deg);
+
+  }
+
+}
