--- a/main.css
+++ b/main.css
@@ -9,13 +9,20 @@ html {
   font-size: 2vw;
 }
 
-body {
-  /* background-color: #0762f5; */
-  background-color: #212f3d;
-  color: #fff;
-  font: 600 1rem/1.3 Consolas, Andale Mono, monospace;
-  padding: 3rem;
+@font-face {
+    font-family: 'cozettevectorregular';
+    src: url('/fonts/cozette/cozettevector-webfont.woff2') format('woff2'),
+        url('/fonts/cozette/cozettevector-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
 
+body {
+    /* background-color: #0762f5; */
+    background-color: #212f3d;
+    color: #fff;
+    font: 600 1rem/1.3 cozettevectorregular, Consolas, Andale Mono, monospace;
+    padding: 3rem;
 }
 
 /* Adapted from source: http://aleclownes.com/2017/02/01/crt-display.html */
